syntax = "proto3";

package produtos;

option go_package = "/pb";

message ProductRequest {
  string name = 1;
}

message ProductResponse {
  string name = 1;
}

service ProductsService {
  rpc CreateProduct(ProductRequest) returns (ProductResponse){};
}